--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 
 @import "tailwindcss";
+@plugin "flowbite-react/plugin/tailwindcss";
+@source "../.flowbite-react/class-list.json";
 
 @layer components{
     .nav-link{
